<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quad_sim_python</name>
  <version>0.0.1</version>
  <description>Quadcopter simulator and controller based on Python</description>
  <maintainer email="ricardo.azambuja@gmail.com">ros2user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>ros2param</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
